--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://img.icons8.com/emoji/48/watch-emoji.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chronix - India's best watch collections</title>
   </head>
